# herccules-tmtc

./: .gitignore  LICENSE  README.md
Data_Types/: .gitignore  CMakeLists.txt  Makefile  asn1sccSettings.cmake  configureAsn1SccTarget.cmake  info.json
Data_Types/src/: DataTypes-Events.acn  DataTypes-Events.asn  DataTypes-OperatingModes.acn  DataTypes-OperatingModes.asn  DataTypes-Subsystems.acn  DataTypes-Subsystems.asn  DataTypes-Telecommands.acn  DataTypes-Telecommands.asn  DataTypes-Telemetries.acn  DataTypes-Telemetries.asn  DataTypes.acn  DataTypes.asn  meta.json
